tests/accept/test_change_globl_var.lp
# expected = 2
Program{
    int x = 1;

    int main(){
        x = 2;
        return x;
    }
}